test/Programs/InvalidTests/invalidParams1/invalidParams1.cfs

-- It doesn't really matter, it should not throw an error here
start :: Int
start = 10

-- It should have 2 params but it only has one
fun :: Int -> Bool
fun x y = True
